--- a/amazon-clone/src/Header.css
+++ b/amazon-clone/src/Header.css
@@ -22,8 +22,48 @@
   border-radius: 24px;
 }
 
+.header__searchInput {
+  padding: 12px;
+  height: 10px;
+  border: none;
+  width: 100%;
+}
+
 .header__searchIcon {
   padding: 5px;
-  height: 22px !important;
-  background-color: #f79b34;
+  height: 24px !important;
+  background-color: #febd69;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header__option {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
+}
+
+.header__optionLineOne {
+  font-size: 10px;
+}
+
+.header__optionLineTwo {
+  font-size: 13px;
+  font-weight: 800;
+}
+
+.header__optionBasket {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.header__basketCount {
+  margin-left: 10px;
+  margin-right: 10px;
 }
