--- a/amazon-clone/src/Product.css
+++ b/amazon-clone/src/Product.css
@@ -12,6 +12,10 @@
   z-index: 1;
 }
 
+.product:hover {
+  transform: scale(1.01);
+}
+
 .product > img {
   max-height: 200px;
   width: 100%;
@@ -20,7 +24,6 @@
 }
 
 .product__info {
-    
   height: 100px;
   margin-bottom: 15px;
 }
